# Trading-Terminal

./: .gitignore  .prettierrc  eslint.config.js  package.json  pnpm-lock.yaml  turbo.json
.claude/: settings.local.json
apps/desktop/: package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/web/: README.md  eslint.config.js  package.json  vite.config.ts
apps/web/src/lib/: index.ts
apps/web/src/lib/components/: RightDrawer.svelte  Watchlist.svelte  index.ts
apps/web/src/lib/components/bars/: TopBar.svelte
apps/web/src/lib/components/layout/: AppShell.svelte
apps/web/src/lib/components/menus/: Side.svelte
apps/web/src/lib/components/providers/: ThemeProvider.svelte
apps/web/src/lib/components/ui/: Button.svelte  LeftSideMenu.svelte
apps/web/src/lib/config/: app.config.ts  env.ts  features.config.ts  index.ts
apps/web/src/lib/features/markets/: api.ts  index.ts  store.ts  types.ts
apps/web/src/lib/services/: http.ts
apps/web/src/lib/stores/: terminal.ts  theme.ts
apps/web/src/lib/theme/: dark.scss  index.ts  light.scss  presets.ts  types.ts  utils.ts
apps/web/src/lib/theme/components/: ThemeProvider.svelte  ThemeSwitcher.svelte
apps/web/src/lib/types/: menu.ts
apps/web/src/lib/utils/: format.ts
apps/web/src/routes/: +layout.svelte  +page.svelte  layout.css  layout.scss
apps/web/src/routes/(app)/: +layout.svelte
apps/web/src/routes/(app)/overview/: +page.svelte
apps/web/src/routes/ui/: +page.svelte
docs/: STRUCTURE.md
(+1 files in other folders)
